--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Venus Agente AgroMicrocredito 360</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
+    <meta key="title" content="Venus Agente AgroMicrocredito 360" property="og:title" />
     <meta
       content="Make beautiful websites regardless of your design experience."
       property="og:description"
@@ -23,6 +23,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main/main.tsx"></script>
   </body>
 </html>
