--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Venus Agente AgroMicrocredito 360</title>
-    <meta key="title" content="Venus Agente AgroMicrocredito 360" property="og:title" />
+    <title>Venus Agente AgroMicrocrédito 360</title>
+    <meta key="title" content="Venus Agente Agro Microcrédito 360" property="og:title" />
     <meta
       content="Make beautiful websites regardless of your design experience."
       property="og:description"
@@ -19,7 +19,7 @@
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
-    <link href="/favicon.ico" rel="icon" />
+    <link href="/logo.svg" rel="icon" />
   </head>
   <body>
     <div id="root"></div>
